--- a/package.json
+++ b/package.json
@@ -4,11 +4,11 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "dev:socket": "cross-env NODE_OPTIONS=\"--loader ts-node/esm --trace-warnings --no-warnings\" ts-node server.mts",
+    "dev:socket": "ts-node --project tsconfig.server.json -r tsconfig-paths/register server.ts",
     "build": "next build",
-    "build:socket": "next build && tsc --project tsconfig.server.json",
+    "build:socket": "tsc -p tsconfig.server.json",
     "start": "next start",
-    "start:socket": "cross-env NODE_ENV=production node dist/server.mjs",
+    "start:socket": "set TSConfigPaths_DEBUG=true && node -r tsconfig-paths/register dist/server.js",
     "lint": "next lint"
   },
   "dependencies": {
@@ -25,7 +25,8 @@
     "socket.io": "^4.8.1",
     "socket.io-client": "^4.8.1",
     "tailwind-merge": "^3.3.1",
-    "ts-node": "^10.9.2"
+    "ts-node": "^10.9.2",
+    "uuid": "^13.0.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
@@ -38,6 +39,7 @@
     "eslint-config-next": "15.3.3",
     "prisma": "^6.11.1",
     "tailwindcss": "^4",
+    "tsconfig-paths": "^4.2.0",
     "tw-animate-css": "^1.3.4",
     "typescript": "^5"
   }
