--- a/tsconfig.server.json
+++ b/tsconfig.server.json
@@ -2,12 +2,11 @@
   "extends": "./tsconfig.json",
   "compilerOptions": {
     "module": "CommonJS",
-    "target": "es2017",
+    "target": "ES2020",
+    "moduleResolution": "node",
+    "esModuleInterop": true,
     "outDir": "./dist",
-    "moduleResolution": "node10",
-    "strict": true,
-    "noEmit": false,
-    "isolatedModules": false
+    "noEmit": false // override tsconfig.json
   },
-  "include": ["server.mts"]
+  "include": ["./server.ts", "src/**/*"]
 }
